[package]
name = "qgsrepo"
version = "0.1.3"
authors = ["Petr Tsymbarovich <petr@tsymbarovich.ru>"]
description = "QGIS repository generator"
repository = "https://github.com/mentaljam/qgsrepo"
readme = "README.md"
license = "zlib"
keywords = ["qgis", "repository"]
build = "build.rs"

[profile.release]
lto = true
panic = 'abort'

[dependencies]
argparse = "*"
zip = { version = "0.2", default-features = false }
rust-ini = "0.10.0"
xml-rs = "0.4"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "*"
strfmt = "0.1.5"

[package.metadata.winres]
LegalCopyright = "Petr Tsymbarovich"
