[package]
name = "qgsrepo"
version = "0.1.4"
authors = ["Petr Tsymbarovich <petr@tsymbarovich.ru>"]
description = "QGIS repository generator"
repository = "https://github.com/mentaljam/qgsrepo"
readme = "README.md"
license = "zlib"
keywords = ["qgis", "repository"]
build = "build.rs"

[profile.release]
lto = true
panic = 'abort'

[dependencies]
argparse = "^0.2"
zip = { version = "^0.5", features = ["deflate"] }
rust-ini = "^0.13"
xml-rs = "^0.8"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "*"
strfmt = "^0.1"

[package.metadata.winres]
LegalCopyright = "Petr Tsymbarovich"
